--- a/why.html
+++ b/why.html
@@ -46,7 +46,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div style="font-size: 20px;" class="navbar-nav mx-auto py-0 text-center">
-            <a href="" class="nav-item nav-link active" style="color: white; font-weight: bold;">Why Freed?</a>
+            <a href="why.html" class="nav-item nav-link active" style="color: white; font-weight: bold;">Why Freed?</a>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownSolutions" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="color: white; font-weight: bold;">
                     Solutions
