--- a/why.html
+++ b/why.html
@@ -52,10 +52,10 @@
                     Solutions
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownSolutions" style="background-color: black; border: none;">
-                    <li><a class="dropdown-item" href="#" style="color: white; font-weight: bold; transition: background-color 0.3s ease;">Healthcare Strategy Consulting</a></li>
-                    <li><a class="dropdown-item" href="#" style="color: white; font-weight: bold; transition: background-color 0.3s ease;">Healthcare Analytics & Technology Consulting</a></li>
-                    <li><a class="dropdown-item" href="#" style="color: white; font-weight: bold; transition: background-color 0.3s ease;">Healthcare Regulatory Compliance Consulting</a></li>
-                    <li><a class="dropdown-item" href="#" style="color: white; font-weight: bold; transition: background-color 0.3s ease;">Healthcare Revenue Cycle Consulting</a></li>
+                    <li><a class="dropdown-item" href="stratergy.html" style="color: white; font-weight: bold; transition: background-color 0.3s ease;">Healthcare Strategy Consulting</a></li>
+                    <li><a class="dropdown-item" href="analytics.html" style="color: white; font-weight: bold; transition: background-color 0.3s ease;">Healthcare Analytics & Technology Consulting</a></li>
+                    <li><a class="dropdown-item" href="compliance.html" style="color: white; font-weight: bold; transition: background-color 0.3s ease;">Healthcare Regulatory Compliance Consulting</a></li>
+                    <li><a class="dropdown-item" href="consulting.html" style="color: white; font-weight: bold; transition: background-color 0.3s ease;">Healthcare Revenue Cycle Consulting</a></li>
                     <li><a class="dropdown-item" href="operations.html" style="color: white; font-weight: bold; transition: background-color 0.3s ease;">Healthcare Operations Consulting</a></li>
                 </ul>
             </li>
@@ -64,12 +64,12 @@
                     Company
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownCompany" style="background-color: black; border: none;">
-                    <li><a class="dropdown-item" href="#" style="color: white; font-weight: bold; transition: background-color 0.3s ease;">Our Leaders</a></li>
-                    <li><a class="dropdown-item" href="#" style="color: white; font-weight: bold; transition: background-color 0.3s ease;">Clients</a></li>
-                    <li><a class="dropdown-item" href="#" style="color: white; font-weight: bold; transition: background-color 0.3s ease;">We Are Freed</a></li>
+                    <li><a class="dropdown-item" href="leadership.html" style="color: white; font-weight: bold; transition: background-color 0.3s ease;">Our Leaders</a></li>
+                    <li><a class="dropdown-item" href="clients.html" style="color: white; font-weight: bold; transition: background-color 0.3s ease;">Clients</a></li>
+                    <li><a class="dropdown-item" href="company.html" style="color: white; font-weight: bold; transition: background-color 0.3s ease;">We Are Freed</a></li>
                 </ul>
             </li>
-            <a href="" class="nav-item nav-link" style="color: white; font-weight: bold;">Health Equity</a>
+            <a href="equity.html" class="nav-item nav-link" style="color: white; font-weight: bold;">Health Equity</a>
         </div>
     </div>
 </nav>
