--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
 <div>
    
     <!-- Topbar End -->
+    <div id="topBanner" style="background-color: aquamarine; color: black; padding: 10px; display: flex; justify-content: space-between; align-items: center; position: relative; z-index: 1000;">
+        <div style="display: flex; align-items: center; margin: 0 auto;">
+            <button class="watch-now-btn" style="background-color: #451885; color: white; border: none; padding: 10px 20px; margin-right: 10px; cursor: pointer;">WATCH NOW</button>
+            <span>Learn how the power of social care and medical care partnerships are improving health equity.</span>
+        </div>
+        <button class="close-btn" onclick="document.getElementById('topBanner').style.display = 'none';" style="background: none; border: none; color: white; font-size: 20px; cursor: pointer;">✖</button>
+    </div>
 
 
     <!-- Navbar Start -->
