--- a/compliance.html
+++ b/compliance.html
@@ -196,7 +196,9 @@
   </div>
 
 <div style="text-align: center; padding: 50px; background-color: #e0e0e0;">
-    <p style="color: black; font-size: 30px; margin-bottom: 20px;">Areas of focus</p>
+    <p style="font-size: 40px; color: rgb(22, 22, 68); font-weight: 900 !important; text-shadow: 1px 1px 0  rgb(22, 22, 68), -1px -1px 0  rgb(22, 22, 68), 1px -1px 0  rgb(22, 22, 68), -1px 1px 0  rgb(22, 22, 68);">
+        Areas of Focus
+    </p>
    
   </div>
   <div style="display: flex;padding: 80px;background-color: #e0e0e0;">
