--- a/operations.html
+++ b/operations.html
@@ -197,7 +197,10 @@
 
 
   <div style="text-align: center; padding: 50px; background-color: #e0e0e0;">
-    <p style="color:#2c2c54; font-size: 30px; margin-bottom: 20px;font-weight: bold;">Areas of Focus</p>
+    
+    <p style="font-size: 40px; color: rgb(22, 22, 68); font-weight: 900 !important; text-shadow: 1px 1px 0  rgb(22, 22, 68), -1px -1px 0  rgb(22, 22, 68), 1px -1px 0  rgb(22, 22, 68), -1px 1px 0  rgb(22, 22, 68);">
+        Areas of Focus
+    </p>
 </div>
 
 <div style="display: flex; justify-content: center; background-color: #e0e0e0;color: black;  padding: 20px;">
