tueday midday update 5

--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
   </div>
  
 <div style="display: flex; width: 100%; padding-left: 6%; background-color: #e0e0e0;padding-right: 6%;">
-    <div id="left-panel" style="flex: 1; background-color: #2c2c54; color: white; padding: 18px;">
+    <div id="left-panel" style="flex: 1; background-color: #2c2c54; color: white; padding-left: 18px;padding-right: 18px;">
        
         <h2 style="color: white; cursor: pointer;font-size: 25px;padding-top: 18px;" onclick="toggleSection('operations')" onmouseover="this.style.color='aquamarine';" onmouseout="this.style.color='white';">- Healthcare Operations Consulting</h2>
         <div id="operations" style="display: block; padding: 0 10px; margin: 0; transition: max-height 0.5s ease-out; overflow: hidden; max-height: 1000px;">
