tueday midday update 5

--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 
         </div>
 
-        <h2 style="color: white; cursor: pointer;font-size: 25px;padding-top: 18px;" onclick="toggleSection('revenue')" onmouseover="this.style.color='aquamarine';" onmouseout="this.style.color='white';">+ Healthcare Revenue Cycle Consulting</h2>
+        <h2 style="color: white; cursor: pointer;font-size: 25px;padding-top: 18px;padding-bottom: 18px;" onclick="toggleSection('revenue')" onmouseover="this.style.color='aquamarine';" onmouseout="this.style.color='white';">+ Healthcare Revenue Cycle Consulting</h2>
         <div id="revenue" style="display: none; padding: 0 10px; margin: 0; transition: max-height 0.5s ease-out; overflow: hidden; max-height: 0;">
             <p style="margin: 10px 0;">Maximizing revenue while improving the quality of care is more challenging than ever. Freed consultants expertly evaluate every aspect of your organization’s revenue cycle — from a provider, patient and health plan perspective. Our experts partner with you on increasing revenue and containing costs by implementing reimbursement models and applying a strategic approach to provider network management.</p>
             <a href="consulting.html" style="color: #00d1b2; text-decoration: none; margin: 10px 0; display: block;">Learn More »</a>
