--- a/why.html
+++ b/why.html
@@ -393,6 +393,18 @@
     </div>
 </div>
 
+ 
+<div style="padding-left: 6%; background-color: white; padding-right: 6%;"> <!-- Outer div with padding -->
+    <div style="max-width: 800px; margin: 0 auto; background-color: white; padding: 30px; box-sizing: border-box; text-align: center;"> <!-- Centered content -->
+        <h2 style="font-size: 40px; font-weight: bold; color: #000; margin-bottom: 20px;">
+            Get On The Fast Track To Success
+        </h2>
+        <a href="#" style="display: inline-block; text-decoration: none; font-size: 16px; color: #6534ac; border: 2px solid #6534ac; padding: 15px 25px; font-weight: bold; border-radius: 0px; margin-top: 20px;">
+            Book Now
+        </a>
+    </div>
+</div>
+
  <!-- Footer Start -->
 <!-- Footer Start -->
 
