--- a/compliance.html
+++ b/compliance.html
@@ -195,7 +195,7 @@
     <div style="display: flex; width: 100%; max-width: 1200px; flex-wrap: wrap;">
         <div class="accordion-item" style="display: flex; width: 100%; border: none;">
             <!-- Left Section (Title) -->
-            <div class="accordion-title" style="width: 50%; min-width: 250px; display: flex; align-items: center;">
+            <div class="accordion-title" style="width: 50%; min-width: 250px; display: flex;">
                 <h2 style="color: #2c2c54; cursor: pointer; font-size: 25px; text-align: left; width: 100%;" 
                     onclick="toggleSection('operations')" 
                     onmouseover="this.style.color='#451885';" 
@@ -223,7 +223,7 @@
 
         <div class="accordion-item" style="display: flex; width: 100%; border: none;">
             <!-- Left Section -->
-            <div class="accordion-title" style="width: 50%; min-width: 250px; display: flex; left: 0%;display: flex; align-items: center;">
+            <div class="accordion-title" style="width: 50%; min-width: 250px; display: flex; left: 0%;display: flex; ">
                 <h2 style="color: #2c2c54; cursor: pointer; font-size: 25px; width: 100%;" 
                     onclick="toggleSection('strategy')" 
                     onmouseover="this.style.color='#451885';" 
@@ -254,7 +254,7 @@
 
         <div class="accordion-item" style="display: flex; width: 100%; border: none;">
             <!-- Left Section -->
-            <div class="accordion-title" style="width: 50%; min-width: 250px; display: flex; align-items: center; justify-content: center;">
+            <div class="accordion-title" style="width: 50%; min-width: 250px; display: flex; ">
                 <h2 style="color: #2c2c54; cursor: pointer; font-size: 25px; width: 100%;" 
                     onclick="toggleSection('analytics')" 
                     onmouseover="this.style.color='#451885';" 
