--- a/index.html
+++ b/index.html
@@ -476,13 +476,14 @@
 
   
   <div style="padding-left: 6%; background-color: #e0e0e0; padding-right: 6%;">
-    <div style="max-width: 1200px; margin: 0 auto; background-color: #65CFE9; padding: 30px; box-sizing: border-box; border-radius: 10px;">
+    <div style="max-width: 1200px; margin: 0 auto; background-color: #65CFE9; padding: 30px; box-sizing: border-box; ">
         <form id="quotationForm">
             <div style="display: flex; flex-wrap: wrap; gap: 15px;">
                 <div style="flex: 1; min-width: 30%;">
-                    <label for="service" style="display: block; font-weight: bold; margin-bottom: 5px;">Service</label>
-                    <select id="service" name="service" style="width: 100%; padding: 12px; border: 1px solid #444; border-radius: 8px;">
+                    <label for="service" style="display: block; font-weight: bold; margin-bottom: 5px;color: #8a2be2;">Service</label>
+                    <select id="service" name="service" style="width: 100%; padding: 12px; border: 1px solid #444; ">
                         <option value="">Select Service</option>
+                        <option value="Operations Management">All services</option>
                         <option value="Operations Management">Operations Management</option>
                         <option value="Human Resources Consulting">Human Resources Consulting</option>
                         <option value="Analytics and Reporting">Analytics and Reporting</option>
@@ -491,8 +492,8 @@
                     </select>
                 </div>
                 <div style="flex: 1; min-width: 30%;">
-                    <label for="facilitySize" style="display: block; font-weight: bold; margin-bottom: 5px;">Facility Size</label>
-                    <select id="facilitySize" name="facilitySize" style="width: 100%; padding: 12px; border: 1px solid #444; border-radius: 8px;">
+                    <label for="facilitySize" style="display: block; font-weight: bold; margin-bottom: 5px;color: #8a2be2;">Facility Size</label>
+                    <select id="facilitySize" name="facilitySize" style="width: 100%; padding: 12px; border: 1px solid #444; ">
                         <option value="">Select Size</option>
                         <option value="1.0">Small (1-10 beds)</option>
                         <option value="1.5">Medium (11-30 beds)</option>
@@ -500,16 +501,16 @@
                     </select>
                 </div>
                 <div style="flex: 1; min-width: 30%;">
-                    <label for="employeeCount" style="display: block; font-weight: bold; margin-bottom: 5px;">Number of Employees</label>
-                    <input type="number" id="employeeCount" name="employeeCount" style="width: 100%; padding: 12px; border: 1px solid #444; border-radius: 8px;" min="1">
+                    <label for="employeeCount" style="display: block; font-weight: bold; margin-bottom: 5px;color: #8a2be2;">Number of Employees</label>
+                    <input type="number" id="employeeCount" name="employeeCount" style="width: 100%; padding: 12px; border: 1px solid #444; " min="1">
                 </div>
                 <div style="flex: 1; min-width: 30%;">
-                    <label for="yearsInOperation" style="display: block; font-weight: bold; margin-bottom: 5px;">Years in Operation</label>
-                    <input type="number" id="yearsInOperation" name="yearsInOperation" style="width: 100%; padding: 12px; border: 1px solid #444; border-radius: 8px;" min="0">
+                    <label for="yearsInOperation" style="display: block; font-weight: bold; margin-bottom: 5px;color: #8a2be2;">Years in Operation</label>
+                    <input type="number" id="yearsInOperation" name="yearsInOperation" style="width: 100%; padding: 12px; border: 1px solid #444; " min="0">
                 </div>
                 <div style="flex: 1; min-width: 30%;">
-                    <label for="scope" style="display: block; font-weight: bold; margin-bottom: 5px;">Scope of Work</label>
-                    <select id="scope" name="scope" style="width: 100%; padding: 12px; border: 1px solid #444; border-radius: 8px;">
+                    <label for="scope" style="display: block; font-weight: bold; margin-bottom: 5px;color: #8a2be2;">Scope of Work</label>
+                    <select id="scope" name="scope" style="width: 100%; padding: 12px; border: 1px solid #444; ">
                         <option value="">Select Scope</option>
                         <option value="1.0">Basic</option>
                         <option value="1.5">Standard</option>
