--- a/knowledge.html
+++ b/knowledge.html
@@ -152,8 +152,8 @@
         .form-group select {
             width: calc(100% - 22px);
             padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
+            border: 2px solid #ddd;
+            
         }
         .form-group select {
             appearance: none;
@@ -269,7 +269,7 @@ select:required.user-interacted:invalid {
 
     <div style="background-color: white;padding: 60px;">
     <div class="form-container" style="padding-top: 50px !important;background-color: white;">
-        <h2 style="padding-bottom: 20px;">Personal Details</h2>
+        <h2 >Personal Details</h2>
         <div class="form-group-inline">
             <div class="form-group">
                 <label for="firstName">First Name</label>
@@ -314,7 +314,7 @@ select:required.user-interacted:invalid {
             </div>
         </div>
 
-        <h2 style="padding-top: 20px;padding-bottom: 20px;">Professional Experience</h2>
+        <h2 style="padding-top: 20px;">Professional Experience</h2>
         <div class="form-group-inline">
             <div class="form-group">
                 <label for="experience">Experience</label>
@@ -343,7 +343,7 @@ select:required.user-interacted:invalid {
             </div>
         </div>
 
-        <h2 style="padding-top: 20px;padding-bottom: 20px;">Job Preferences</h2>
+        <h2 style="padding-top: 20px;">Job Preferences</h2>
         <div class="form-group-inline">
             <div class="form-group">
                 <label for="salaryExpectation">Salary Expectation</label>
@@ -393,7 +393,7 @@ select:required.user-interacted:invalid {
             
         </div>
 
-        <h3 style="color: black;padding-top: 20px;padding-bottom: 20px;">Other Details</h3>
+        <h3 style="color: black;padding-top: 20px;font-size: 35px;">Other Details</h3>
 <div style="margin-bottom: 10px; display: flex; justify-content: space-between;">
     <label>1.Do you have experience managing a team?</label>
     <div>
